Issue #204639 - Options window, Editor section, General tab has a purposeless horizontal scroll bar.

--- a/options.editor/src/org/netbeans/modules/options/generaleditor/GeneralEditorPanel.form
+++ b/options.editor/src/org/netbeans/modules/options/generaleditor/GeneralEditorPanel.form
@@ -24,67 +24,68 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="lWhenSavingFiles" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jSeparator4" pref="755" max="32767" attributes="0"/>
+              <Component id="jSeparator4" pref="458" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <Component id="lCamelCaseBehavior" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jSeparator3" pref="730" max="32767" attributes="0"/>
+              <Component id="jSeparator3" pref="431" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <Component id="lCodeFolding" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="jSeparator1" pref="792" max="32767" attributes="0"/>
+              <Component id="jSeparator1" pref="488" max="32767" attributes="0"/>
           </Group>
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lUseCodeFolding" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lCollapseByDefault" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lRemoveTrailingWhitespace" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lCamelCaseBehaviorExample" min="-2" max="-2" attributes="0"/>
-                          <Component id="cboRemoveTrailingWhitespace" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="155" pref="155" max="155" attributes="0"/>
-                      <Component id="cbCamelCaseBehavior" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="155" pref="155" max="155" attributes="0"/>
-                      <Component id="cbFoldImports" linkSize="1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="155" pref="155" max="155" attributes="0"/>
-                      <Component id="cbFoldInnerClasses" linkSize="1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="155" pref="155" max="155" attributes="0"/>
-                      <Component id="cbFoldMethods" linkSize="1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="cbFoldTags" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="155" pref="155" max="155" attributes="0"/>
-                      <Component id="cbUseCodeFolding" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="155" pref="155" max="155" attributes="0"/>
-                      <Component id="cbFoldJavadocComments" linkSize="1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="155" pref="155" max="155" attributes="0"/>
-                      <Component id="cbFoldInitialComments" linkSize="1" min="-2" max="-2" attributes="0"/>
-                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="lSearch" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jSeparator5" pref="813" max="32767" attributes="0"/>
+                      <Component id="jSeparator5" pref="507" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lUseCodeFolding" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lCollapseByDefault" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lRemoveTrailingWhitespace" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lCamelCaseBehaviorExample" min="-2" max="-2" attributes="0"/>
+                                  <Component id="cboRemoveTrailingWhitespace" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="155" pref="155" max="155" attributes="0"/>
+                              <Component id="cbCamelCaseBehavior" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="155" pref="155" max="155" attributes="0"/>
+                              <Component id="cbFoldImports" linkSize="1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="cbFoldTags" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="155" pref="155" max="155" attributes="0"/>
+                              <Component id="cbFoldInnerClasses" linkSize="1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="cbFoldInitialComments" linkSize="1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="155" pref="155" max="155" attributes="0"/>
+                              <Component id="cbFoldMethods" linkSize="1" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="cbFoldJavadocComments" linkSize="1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="155" pref="155" max="155" attributes="0"/>
+                              <Component id="cbUseCodeFolding" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="24" max="-2" attributes="0"/>
@@ -115,19 +116,21 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lCollapseByDefault" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cbFoldMethods" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="cbFoldTags" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbFoldJavadocComments" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="cbFoldInnerClasses" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="cbFoldInnerClasses" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cbFoldInitialComments" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="cbFoldImports" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="cbFoldJavadocComments" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="cbFoldInitialComments" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="cbFoldImports" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cbFoldTags" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Component id="jSeparator3" min="-2" pref="10" max="-2" attributes="0"/>
                   </Group>
                   <Component id="lCamelCaseBehavior" min="-2" max="-2" attributes="0"/>
@@ -158,7 +161,7 @@
                   <Component id="lEditorSearchType" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cboEditorSearchType" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="59" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -230,7 +233,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lCamelCaseBehaviorExample">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Example: Caret stops at J, T, N in &quot;JavaTypeName&quot; when using next/previous word acctions"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;Example: Caret stops at J, T, N in &quot;JavaTypeName&quot;&lt;br&gt;when using next/previous word acctions&lt;/html&gt;"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JSeparator" name="jSeparator4">
