--- a/git/src/org/netbeans/modules/git/options/GitOptionsPanel.form
+++ b/git/src/org/netbeans/modules/git/options/GitOptionsPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
@@ -16,15 +16,19 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="excludeNewFiles" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="signOffCheckBox" alignment="0" min="-2" pref="557" max="-2" attributes="0"/>
-                  <Component id="cbOpenOutputWindow" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="cbIgnoreNotSharableFiles" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="signOffCheckBox" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="excludeNewFiles" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="cbOpenOutputWindow" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="cbIgnoreNotSharableFiles" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="20" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
