--- a/core.ui/src/org/netbeans/core/ui/options/filetypes/FileAssociationsPanel.form
+++ b/core.ui/src/org/netbeans/core/ui/options/filetypes/FileAssociationsPanel.form
@@ -1,6 +1,11 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.6" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+  <Properties>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[360, 360]"/>
+    </Property>
+  </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="1"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -22,7 +27,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="lblFileAssociations" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="sepFileAssociations" pref="613" max="32767" attributes="0"/>
+                      <Component id="sepFileAssociations" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="10" pref="10" max="10" attributes="0"/>
@@ -35,14 +40,14 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="lblAssociatedAlso" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="lblAssociatedAlsoExt" pref="364" max="32767" attributes="0"/>
+                              <Component id="lblAssociatedAlsoExt" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="cbExtension" alignment="0" pref="337" max="32767" attributes="1"/>
-                                  <Component id="cbType" alignment="0" pref="337" max="32767" attributes="1"/>
+                                  <Component id="cbExtension" alignment="0" pref="0" max="32767" attributes="1"/>
+                                  <Component id="cbType" alignment="0" pref="0" max="32767" attributes="1"/>
                               </Group>
-                              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="btnNew" min="-2" max="-2" attributes="1"/>
@@ -60,13 +65,10 @@
                               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                               <Component id="lblPattern" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="autoScan" pref="584" max="32767" attributes="0"/>
-                              <EmptySpace min="44" pref="44" max="44" attributes="0"/>
-                          </Group>
+                          <Component id="autoScan" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                      <Component id="txtPatternError" pref="75" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="txtPatternError" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="lblFilesIgnored" min="-2" max="-2" attributes="0"/>
@@ -77,11 +79,11 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="btnDefaultIgnored" min="-2" max="-2" attributes="1"/>
                           </Group>
-                          <Component id="setFilesIgnored" alignment="0" pref="565" max="32767" attributes="0"/>
+                          <Component id="setFilesIgnored" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -111,7 +113,7 @@
                   <Component id="lblAssociatedAlso" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblAssociatedAlsoExt" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="setFilesIgnored" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="lblFilesIgnored" alignment="2" min="-2" max="-2" attributes="0"/>
@@ -126,7 +128,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="txtPatternError" pref="129" max="32767" attributes="0"/>
-                      <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
